apps/ecommerce/stack.yaml
#Deployment backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend-deployment
  namespace: ecommerce
  labels:
    app: ecommerce-backend
spec:
  replicas: 3
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: ecommerce-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: ecommerce-backend
    spec:
      containers:
        - name: ecommerce-backend
          image: mukuzro/ecommerce-backend:v20260503-4
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: tcp
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: application-config-map-volume
              mountPath: /app/config/application.properties
              subPath: application.properties
      volumes:
        - name: application-config-map-volume
          configMap:
            name: ecommerce-backend-application-properties-configmap
            defaultMode: 420
---
#Deployment frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-frontend-deployment
  namespace: ecommerce
  labels:
    app: ecommerce-frontend
spec:
  replicas: 3
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: ecommerce-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: ecommerce-frontend
    spec:
      containers:
        - name: ecommerce-frontend
          image: mukuzro/ecommerce-frontend:v20260503-2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: tcp
              protocol: TCP
---
#Service backend
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend-service
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecommerce-backend
  ports:
    - name: tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
---
#Service frontend
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend-service
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecommerce-frontend
  ports:
    - name: tcp
      port: 80
      targetPort: 80
      protocol: TCP
---
#Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-frontend-ingress
  namespace: ecommerce
spec:
  ingressClassName: nginx
  rules:
    - host: ecommerce.app-store.codes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - ecommerce.app-store.codes
      secretName: ecommerce-tls
---
#StatefulSet database
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: ecommerce
spec:
  serviceName: mariadb-service
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mariadb
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      securityContext:
        fsGroup: 65534
      containers:
        - name: mariadb
          image: mariadb:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: nfs-pvc
  updateStrategy:
    type: RollingUpdate
---
#Service database
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: ecommerce
spec:
  type: NodePort
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      nodePort: 31306
